fixes bug is not a shared mount

--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - 3306:3306
     volumes:
-      - ./data57:/var/lib/mysql/
+      - ./data57:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_USER=admin
