added configs to mysql

--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - 3306:3306
     volumes:
       - ./data57:/var/lib/mysql
+      - ./configs/db57.cnf:/etc/mysql/conf.d/db57.cnf
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_USER=admin
